--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     box-sizing: border-box
 }
 
+body{
+    background-image:url("./img/cinema-background-illustration/inicio.jpg") ;
+    background-size: cover; /* La imagen de fondo se reescala automáticamente con el cambio del ancho de ventana del navegador */
+}
+
 header{
     background: #1f1f1f;
     color:white;
