--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ header{
 header span{
     cursor:pointer;
     padding:0.8em;
-    margin:0 0.2em;
+    margin:0 0.5em;
     background: rgb(0, 109, 160);
     transition:all 0.4s; /* para que el cambio sea suave*/
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 } 
 
 header span:hover{
@@ -29,13 +30,53 @@ header span:hover{
 }
 
 .movies{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1em;
+    /* background: rgb(0, 130, 65); */
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+    grid-gap: 15px;
+    grid-row-gap: 100px;
+    padding: 3em;
+    margin-top: 100px;
+    width: 100%;
+    height: 50%;
+    transition:all 2s;
+
+    /* flex-wrap: wrap;
+    justify-content: space-between;
+     */
 }
 
-.movie{
+/* .movie{
     display: flex;
     flex-direction: column;
     padding:0.5em;
+} */
+
+.movie{
+    margin: 10px;
+    padding: 10px;
+    background:rgb(184, 184, 184);
+    box-shadow: rgba(0, 0, 0, 0.774) 10px 5px 5px ; ;
+    display: flex;
+    justify-content:center;
+    width: 100%;
+    height: 380px;
+    border-radius: 2%;
+    border: 1px solid rgba(114, 114, 114, 0.63);
+}
+.titulo h2{
+    background: rgb(223, 223, 223);
+    width:190px;
+    height: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    overflow: hidden;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.imgMovie img{
+    margin-top: 10px;
+   /*  background: indigo; */
+    width: 190px;
+    height: 285px;
 }
