--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ header span:hover{
     height: 380px;
     border-radius: 2%;
     border: 1px solid rgba(114, 114, 114, 0.63);
+    cursor:pointer;
 }
 .titulo h2{
     background: rgb(223, 223, 223);
