--- a/style.css
+++ b/style.css
@@ -56,14 +56,14 @@ header span:hover{
     margin: 10px;
     padding: 10px;
     background:rgb(184, 184, 184);
-    box-shadow: rgba(0, 0, 0, 0.774) 10px 5px 5px ; ;
+    box-shadow: rgba(0, 0, 0, 0.774) 10px 5px 5px ; 
     display: flex;
     justify-content:center;
     width: 100%;
     height: 380px;
     border-radius: 2%;
     border: 1px solid rgba(114, 114, 114, 0.63);
-    cursor:pointer;
+    cursor:pointer;   
 }
 .titulo h2{
     background: rgb(223, 223, 223);
@@ -81,3 +81,41 @@ header span:hover{
     width: 190px;
     height: 285px;
 }
+
+.movieDetails{
+    background: rgb(223, 223, 223) ;
+    height: auto;
+    width: 50vw;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    font-size: 1.5rem;
+    padding: 25px;
+    margin-left: 70px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.657) 20px 20px 10px ; 
+}
+
+ .overview{
+    margin-top: 20px; 
+} 
+
+.moreDetails{
+    margin-left: 355px;
+}
+
+.details img{
+  float: left;  
+  /* padding: 25px; */
+  width: auto;
+  height: 35vh;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.548) 4px 4px 5px ; 
+}
+.tituloDetails h2{
+    padding: 5px; 
+    background: rgba(134, 134, 134, 0.5);
+    border-radius: 5px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(139, 139, 139, 0.548) ;
+}
+
+
