--- a/style.css
+++ b/style.css
@@ -33,12 +33,12 @@ header span:hover{
     /* background: rgb(0, 130, 65); */
     display: grid;
     grid-template-columns: repeat(10,1fr);
-    grid-gap: 15px;
+    grid-gap: 2rem;
     grid-row-gap: 100px;
     padding: 3em;
-    margin-top: 100px;
-    width: 100%;
-    height: 50%;
+    margin-top: 2rem;
+    width: 70vw;
+    height: 70vh;
     transition:all 2s;
 
     /* flex-wrap: wrap;
@@ -46,29 +46,25 @@ header span:hover{
      */
 }
 
-/* .movie{
-    display: flex;
-    flex-direction: column;
-    padding:0.5em;
-} */
 
 .movie{
-    margin: 10px;
+    /* margin: 10px; */ 
     padding: 10px;
     background:rgb(184, 184, 184);
     box-shadow: rgba(0, 0, 0, 0.774) 10px 5px 5px ; 
     display: flex;
     justify-content:center;
     width: 100%;
-    height: 380px;
+    height: 17rem;
     border-radius: 2%;
     border: 1px solid rgba(114, 114, 114, 0.63);
     cursor:pointer;   
 }
 .titulo h2{
     background: rgb(223, 223, 223);
-    width:190px;
-    height: 60px;
+    width:8rem;
+    height: 2.7rem;
+    font-size: 1.1em;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     overflow: hidden;
     border-radius: 5px;
@@ -78,18 +74,22 @@ header span:hover{
 .imgMovie img{
     margin-top: 10px;
    /*  background: indigo; */
-    width: 190px;
-    height: 285px;
+    width: 8rem;
+    height: 12rem;
+    border-radius: 5px;
 }
 
 .movieDetails{
     background: rgb(223, 223, 223) ;
+    border: 1px solid rgba(163, 163, 163, 0.63);
     height: auto;
     width: 50vw;
+    position: relative;
+    bottom: 4rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     font-size: 1.5rem;
     padding: 25px;
-    margin-left: 70px;
+    margin-left:26rem;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.657) 20px 20px 10px ; 
 }
@@ -106,7 +106,7 @@ header span:hover{
   float: left;  
   /* padding: 25px; */
   width: auto;
-  height: 35vh;
+  height: 40vh;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.548) 4px 4px 5px ; 
 }
