--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
  body{
-    background-image:url("./img/cinema-background-illustration/inicio.jpg") ;
+    background-image:url("./img/inicio2.jpg") ;
     background-size: cover; /* La imagen de fondo se reescala automáticamente con el cambio del ancho de ventana del navegador */
 } 
 
@@ -50,7 +50,7 @@ header span:hover{
 .movie{
     /* margin: 10px; */ 
     padding: 10px;
-    background:rgb(184, 184, 184);
+    background:rgb(218, 218, 218);
     box-shadow: rgba(0, 0, 0, 0.774) 10px 5px 5px ; 
     display: flex;
     justify-content:center;
@@ -61,7 +61,7 @@ header span:hover{
     cursor:pointer;   
 }
 .titulo h2{
-    background: rgb(223, 223, 223);
+    background: rgb(235, 235, 235);
     width:8rem;
     height: 2.7rem;
     font-size: 1.1em;
